# video-stream

./: DEV_NOTES.md  README.md  html.py.bk  index.html.bk  pyproject.toml  video_stream.py  video_stream.py.bk
backend/: package-lock.json  package.json  pyproject.toml  serverless.yml
backend/comments/: list.py
backend/comments/getComments/: lambda_function.py
backend/daemon/: constants.py  daemon_close.py  daemon_open.py  start.py
backend/daemon/connection/: close.py  open.py
backend/daemon/util/: env.py  queue.py
backend/server/: Server.py
backend/server/connection/: open.py  test.py
backend/server/container/: Container.py  __init__.py  end.py  start.py
backend/server/util/: Address.py  Communication_Line.py  Entity.py  INTERNET_CONNECTION.py  env.py  queue.py
backend/server/util/Communication_Line/: INTERNET_CONNECTION.py
backend/server/util/Entity/: Entity.py  Machine.py
cloud/costs_management/: .gitignore  pyproject.toml  setup_os_env.sh
cloud/costs_management/cloud_providers/: azure_provider.py  base_provider.py
cloud/costs_management/configs/: aws_config_example.yaml
cloud/costs_management/cost_monitor/: main.py
cloud/costs_management/tests/: test_azure_provider.py
cloud/deploy/: .gitignore  DEV_NOTES.md  Deploy.py  README.md  __init__.py  chatgpt.blueprint  deploy.py  deploy.sh  deploy_compute.py  deploy_machines.py  deploy_storage.py  env.example  pyproject.toml  seeded_db.sql  service_lifecycle.py  setup.sh
cloud/deploy/Client/: Client.py
cloud/deploy/CloudMachine/: __init__.py  config.py
cloud/deploy/CloudMachine/GoogleCloud/: ComputeEngine.py
cloud/deploy/CloudMachine/SSH/: Connect.py
cloud/deploy/DB/: DB.py  __init__.py
cloud/deploy/Server/: Server.py  systemd.conf
cloud/deploy/client/: ClientDeployer.py  build.sh  client_deployer.py  run.sh  setup.sh  setup.sh.bk
cloud/deploy/cloud_providers_deployment/: __init__.py  aws_provider.py  azure_provider.py  base_db_provider.py  base_provider.py  gcp_provider.py
cloud/deploy/cloud_providers_deployment/aws/: aws_provider.py
cloud/deploy/cloud_providers_deployment/azure/: azure_base.py  azure_container_provider.py  azure_db_provider.py  azure_mysql_db.py  azure_provider.py
cloud/deploy/cloud_providers_deployment/base/: base_container_provider.py  base_db_provider.py  base_provider.py
cloud/deploy/cloud_providers_deployment/gcp/: gcp_container_provider.py  gcp_provider.py
cloud/deploy/common/: base.py  base_container.py  base_db.py  build.sh  run.sh  setup.sh
cloud/deploy/common/dataclasses_models/: container.py  image.py
cloud/deploy/common/mixins/: bashrc_mixin.py  cloud_mixin.py  docker_mixin.py  package_manager_mixin.py  version_mixin.py
cloud/deploy/os/linux/: .bashrc.cloud.example  .bashrc.local.example  env_setup.py  env_setup.sh  linux.sh
cloud/deploy/server/: ServerDeployer.py  build.sh  db_deployer.py  mysql_db_deployer.py  postgres_db_deployer.py  run.sh  server_deployer.py  setup.sh  setup.sh.bk
cloud/deploy/util/: cloudify_dockerfile.sh  env_vars.sh  file_handling.py  script_args.py  subprocess_helper.py  util.sh
cloud/providers/: .gitignore  README.md  pyproject.toml
cloud/providers/aws/: example.env
cloud/providers/azure/: .env.example  azure_cli.py  example.env  mysql_cost_tuning.py
cloud/providers/gcp/: .env.example  example.env
server/: .env.example  .gitignore  Backend.py  DEV_NOTES.md  Dockerfile  alembic.ini  main.py  planning.txt  pyproject.toml  video_stream.py  your_backup_file_name.sql
server/api/: AdminRouter.py  Cache.py  ClientRouter.py  Router.py  __init__.py  api_gateway.py  gateway.py  main.py  routes.py  test.py  video_stream.py
server/api/Cache/: Cache.py  DataStructures.py  SessionManagement.py  __init__.py
server/api/Routers/: AdminRouter.py  ClientRouter.py  Router.py  __init__.py
server/api/nginx/: nginx.kn.conf
server/api/orchestrator/: orchestrator.py
server/api/session/: AnonymousSession.py
server/api/tests/: comments.py  comments.py.bk
server/api/util/: cookie.py  db_engine.py  error_handling.py  request_data.py
server/auth/: Auth.py  ThirdPartyAuth.py  __init__.py  auth.py
server/auth/authorizor/: Authorizor.py  auth_cookie.py
server/auth/google/: google_auth.py
server/auth/google_auth/: google_auth.py
server/auth/native/: native.py
server/db/: DB_CONNECTOR.py  DB_SCHEMA.py  Seed.py  comments.py  comments.txt  load_db.py  sqlalchemy_practice.py  users.py  users.txt
server/db/Schema/: DB_SCHEMA.py  Models.py  Schema.py  __init__.py  util.py
server/db/Seed/: Data_Base_Structure.py  Data_Records.py  README.md  Seed.py  Seed_copy.py  auth.py  datasets.py  export.py  graph.py
server/db/dataclasses/: database_spec.py  table_testing_state.py
server/db/migrations/: .env.example  README.md  db_connection.py  env.py  script.py.mako
server/db/util/: connections.py
server/util/: db_addr.py  db_engine.py  deployment.py  env.py
testing_2/: .env.example  .gitignore  pyproject.toml  run_tests.py
testing_2/drivers/: devices.py  driver.py
testing_2/profiles/: selenium_profile.py
testing_2/tests/: all_tests.py
testing_2/tests/home_page/: first_load.py
testing_2/tests/user_session/: login.py  logout.py  register.py  session_menu.py
(+209 files in other folders)
