[tool.poetry]
name = "video-stream-backend"
version = "0.1.0"
description = ""
authors = ["quichey <kylengo357@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-serverless = "^0.0.1"
SQLAlchemy = "^2.0.35"
boto3 = "^1.35.20"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
