[tool.poetry]
name = "deploy-tools"
version = "0.1.0"
description = "Deployment orchestration tools for client and server"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "common", from = "deploy" },
    { include = "client", from = "deploy" },
    { include = "server", from = "deploy" },
]

[tool.poetry.dependencies]
python = "^3.11"

# CLI and subprocess helpers
typer = "^0.12.0"
rich = "^13.7.0"

# System/OS utilities
python-dotenv = "^1.0.1"

# Optional: For structured logging
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
ruff = "^0.6.0"
pytest = "^8.0.0"

[tool.poetry.scripts]
deploy = "deploy.deploy:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
